force-app/main/default/objects/CARE_Usage_Baseline__c/CARE_Usage_Baseline__c.object-meta.xml
<CustomObject>
    <description>Baseline usage for high usage calculation</description>
    <label>CARE Usage Baseline</label>
    <nameField>
        <displayFormat>CUB{000000}</displayFormat>
        <label>NAME  (Baseline Seq No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Usage Baseline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>