force-app/main/default/objects/CARE_Usage_Baseline__c/fields/BASELINE_NO__c.field-meta.xml
<CustomField>
    <fullName>BASELINE_NO__c</fullName>
    <externalId>true</externalId>
    <label>BASELINE NO</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>