force-app/main/default/objects/CARE_Usage_Baseline__c/fields/BEGIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>BEGIN_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BEGIN DATE</label>
    <type>Date</type>
</CustomField>