force-app/main/default/objects/CARE_Usage_Baseline__c/fields/END_USE__c.field-meta.xml
<CustomField>
    <fullName>END_USE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>END USE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>