force-app/main/default/objects/CARE_Usage_Baseline__c/fields/PK_KWH_SUMMER__c.field-meta.xml
<CustomField>
    <fullName>PK_KWH_SUMMER__c</fullName>
    <label>PK KWH SUMMER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>