force-app/main/default/objects/CARE_Usage_Baseline__c/fields/PK_KWH_WINTER__c.field-meta.xml
<CustomField>
    <fullName>PK_KWH_WINTER__c</fullName>
    <label>PK KWH WINTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>