force-app/main/default/objects/CARE_Usage_Baseline__c/fields/TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>TERRITORY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TERRITORY</label>
    <length>2</length>
    <type>Text</type>
</CustomField>